# TwistedFateApp

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  twisted_fateLoR.py
db/: db.py  twisted_fate.db
electron/: .gitignore  package-lock.json  package.json
electron/src/: index.js
public/: index.html
src/: App.js
src/appstore/: deckSlice.js  resultSlice.js  store.js
src/components/card/: card.js  cardDetails.js  categoryHeader.js  deck.js
src/components/contextProviders/: cardContext.js
src/components/layout/: Row.js
src/components/results/: gameResult.js  resultsTable.js
src/components/views/: Deck.js  MatchHistory.js
src/css/: index.css
